--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "labs"
+name = "graffity_report"
 version = "0.1.0"
 description = "Add your description here"
 requires-python = ">=3.12"
