--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,4 +5,6 @@ description = "Add your description here"
 requires-python = ">=3.12"
 dependencies = [
     "pytest>=8.4.2",
+    "flask>=3.1.2",
+    "python-decouple>=3.8.0",
 ]
