--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,5 +6,7 @@ requires-python = ">=3.12"
 dependencies = [
     "pytest>=8.4.2",
     "flask>=3.1.2",
+    "flask_cors>=6.0.1",
     "python-decouple>=3.8.0",
+    "pre-commit",
 ]
