backend upd dockerfile+requ+for amvera

--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -1,9 +1,11 @@
 flask
+flask-cors
 flask-sqlalchemy
 geoalchemy2
 psycopg2-binary
 boto3
 python-dotenv
+python-decouple
 flask-jwt-extended
 gunicorn
 dadata
