Fix Railway health

--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -13,7 +13,9 @@ COPY src/ ./src
 
 # Указываем порт через переменную $PORT (Railway задаёт его автоматически)
 ENV PYTHONUNBUFFERED=1
+ENV PORT=5000
 EXPOSE 5000
 
 # Запуск через gunicorn без смены директории, указываем модуль как src.main:app
-CMD ["gunicorn", "--bind", "0.0.0.0:${PORT}", "--workers", "2", "--timeout", "120", "src.main:app"]
+# Используем shell-форму CMD для раскрытия переменной $PORT
+CMD gunicorn --bind 0.0.0.0:$PORT --workers 2 --timeout 120 src.main:app
