--- a/railway.toml
+++ b/railway.toml
@@ -3,8 +3,7 @@ builder = "DOCKERFILE"
 dockerfilePath = "src/Dockerfile"
 
 [deploy]
-startCommand = "gunicorn --bind 0.0.0.0:$PORT --workers 2 --timeout 120 main:app"
 restartPolicyType = "ON_FAILURE"
 restartPolicyMaxRetries = 10
-healthcheckPath = "/api/applications"
+healthcheckPath = "/health"
 healthcheckTimeout = 100
