Switch Railway to NIXPACKS builder, change healthcheck to /health

--- a/railway.toml
+++ b/railway.toml
@@ -1,6 +1,5 @@
 [build]
-builder = "DOCKERFILE"
-dockerfilePath = "src/Dockerfile"
+builder = "NIXPACKS"
 
 [deploy]
 restartPolicyType = "ON_FAILURE"
